<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9d68f4" >

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:textSize="28dp"
        android:textColor="#ffffff" />
    
    <ImageView
        android:id="@+id/restaurantImage"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_below="@+id/nameText"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/temp"
        android:contentDescription="@string/image" />
    
    <ProgressBar
        android:id="@+id/ImageProgress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:visibility="invisible" />
    
    
    <ImageView
        android:id="@+id/ratingImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restaurantImage"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/rating" />
    
    <TextView
        android:id="@+id/addressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ratingImage"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:textColor="#ffffff" />
    
    <TextView
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/addressText"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:textColor="#ffffff" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="5" >
        
        <Button
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/back"
            android:textColor="#ffffff" />
        
        <ImageView
            android:id="@+id/favoritesImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
        	android:layout_weight="1"
        	android:src="@drawable/notfavorited"
        	android:contentDescription="@string/favoriteDes" />
        
        <Button
            android:id="@+id/mapButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/map"
            android:textColor="#ffffff" />
        
    </LinearLayout>

</RelativeLayout>
